changes to UserResource and service; added profile image saving and generating functionality; refactor doUserOperation method